Rewrote the Achievements system
- Removed all old Achievements (to be readded later)
- Added Start and Complete PokeDex achievements
- Added CreditRewards class to house all credit rewards throughout the bot eventually